# control_arm_temperature

./: .gitignore  .gitmodules  README.md
.devcontainer/: devcontainer.json
docker/: Dockerfile  build.bash  run.bash
docs/source/: conf.py  index.rst
docs/source/interface/: interface_guide.md
docs/source/interface/files/: 3_dof_arm.yaml  3_dot_arm.xacro
src/batch_sim/: package.xml  setup.cfg  setup.py
src/batch_sim/batch_sim/: batch_sim.py
src/control/whole_body_controller/: package.xml  setup.cfg  setup.py
src/control/whole_body_controller/config/: arm_wbc.yaml
src/control/whole_body_controller/test/: test_control_tasks.py  test_whole_body_controller.py
src/control/whole_body_controller/whole_body_controller/: control_tasks.py  control_tasks_leg.py  exp_wbc_node.py  pos2torque_leg_publisher.py  temperature_node.py  wbc_leg_node.py  wbc_node.py  whole_body_controller.py  whole_body_controller_leg.py
src/logger/: package.xml  setup.py
src/logger/logger/: exp_plotter.py  kpi.py  logger.py  plotter.py
src/robot/arm_description/: CMakeLists.txt  package.xml
src/robot/arm_description/launch/: display_arm.launch.py  display_leg.launch.py
src/robot/arm_description/urdf/: arm.urdf  arm.xacro  arm_gazebo.xacro  leg.urdf  leg.xacro  links.xacro
src/robot/robot_control/: package.xml
src/robot/robot_control/config/gazebo/: arm_controller.yaml
src/robot/robot_gazebo/: CMakeLists.txt  package.xml
src/robot/robot_gazebo/config/: qj_slider_pub.yaml  rviz_arm.rviz  rviz_arm_exp.rviz  rviz_leg.rviz
src/robot/robot_model/: package.xml  setup.py
(+23 files in other folders)
